# retake-apply-system

./: .dockerignore  .gitignore  Dockerfile.web  README.md  app.env.example  docker-compose.yaml  me.env.example  mongo.env.example  pyproject.toml  token.env.example
.clinerules/: CODEING_STYLE_RULE.md
app/: .gitignore  rxconfig.py
app/retake_apply/: __init__.py  retake_apply.py
app/retake_apply/components/: __init__.py  navbar.py
app/retake_apply/configs/: __init__.py
app/retake_apply/models/: __init__.py  academic_year_setting.py  course.py  courses.py  enrollment.py  payment.py  registrations.py  required_course.py  students.py  system.py  system_log.py  users.py
app/retake_apply/pages/: __init__.py  admin_logs.py  admin_users.py  course_selection.py  dashboard.py  index.py  manager_academic_year.py  manager_courses.py  manager_enrollments.py  manager_students.py
app/retake_apply/states/: __init__.py  admin_logs_state.py  admin_users_state.py  auth.py  course_selection_state.py  dashboard_state.py  manager_academic_year_state.py  manager_courses_state.py  manager_enrollments_state.py  manager_students_state.py
app/retake_apply/utils/: __init__.py  access_encoding.py  csv_utils.py  data_enum.py  db.py  funcs.py  group_encoding.py  lifespan.py
